k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fin-account-hub
  labels:
    name: fin-account-hub
    environment: dev
