k8s/base/05-mariadb-transaction-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-transaction
  namespace: fin-account-hub
spec:
  serviceName: mariadb-transaction
  replicas: 1
  selector:
    matchLabels:
      app: mariadb-transaction
  template:
    metadata:
      labels:
        app: mariadb-transaction
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-transaction-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: mariadb-transaction-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
