k8s/base/04-mariadb-account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-account
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb-account
