k8s/base/06-mariadb-transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-transaction
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb-transaction
