k8s/base/08-mariadb-notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-notification
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb-notification
