k8s/base/11-kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
    - name: plaintext-host
      port: 29092
      targetPort: 29092
  selector:
    app: kafka
