k8s/base/13-schema-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: schema-registry
