k8s/base/15-kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kafka-ui
