k8s/base/17-config-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: config-service
