k8s/base/19-eureka-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8761
      targetPort: 8761
  selector:
    app: eureka-service
