k8s/base/21-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: gateway
