k8s/base/23-account-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: account-service
