k8s/base/25-transaction-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: transaction-service
