k8s/base/27-notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: fin-account-hub
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: notification-service
