k8s/base/28-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fin-account-ingress
  namespace: fin-account-hub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: fin-account.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /accounts(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /transactions(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /notifications(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /actuator(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /eureka(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
